--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="An innovation and transparent business model developed by Property&Crypto Assets Holding that opens potential for millions of people to solve their home question"
     />
+    <meta name="google-site-verification" content="ad-kdQ2LFv6PiboY4NeouTVAazFtZcDCBHnbriZpkoA" />
     <link rel="icon" href="assets/favicon-64x64.png" />
     <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
     <link rel="stylesheet" href="css/style.css" />
